apps/itworksonmycluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: apps
spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  selector:
    matchLabels:
      app: ghost

  template:
    metadata:
      labels:
        app: ghost
    spec:
      nodeSelector:
        role: node-2

      containers:
        - name: ghost
          image: ghost:5
          ports:
            - containerPort: 2368

          readinessProbe:
            httpGet:
              path: /ghost/api/admin/site/
              port: 2368
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /ghost/api/admin/site/
              port: 2368
            initialDelaySeconds: 60
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: ghost-data
              mountPath: /var/lib/ghost/content

      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-data
