apps/itworksonmycluster/deploynment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: apps
spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  selector:
    matchLabels:
      app: ghost

  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5

          ports:
            - containerPort: 2368

          volumeMounts:
            - name: ghost-content
              mountPath: /var/lib/ghost/content

      volumes:
        - name: ghost-content
          persistentVolumeClaim:
            claimName: ghost-data
