apps/itworksonmycluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: apps
spec:
  type: NodePort
  selector:
    app: ghost
  ports:
    - port: 80
      targetPort: 2368
      nodePort: 30080
